new version with working functions

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,17 @@
 Package: agepyramider
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Wrapper for ggplot to create an age pyramid
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Author: Jakob Schumacher
+Maintainer: Jakob Schumacher <jakob@jakiva.de>
+Description: This package creates an ggplot object with an age pyramid.  
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+RoxygenNote: 7.2.3
+Imports: 
+    dplyr,
+    ggplot2
